[project]
name = "ecomm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "langchain>=0.3.25",
    "langchain-mcp-adapters>=0.1.4",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
    "mcp>=1.9.2",
    "python-dotenv>=1.1.0",
]
